<resources>
    <string name="app_name">GLPI</string>
    <string name="txt_user">Usuário</string>
    <string name="txt_senha">Senha</string>
    <string name="text_login">Login</string>
    <string name="text_glpi">GLPI</string>
    <string name="text_nome">Nome</string>
    <string name="text_tombo">Tombo</string>
    <string name="text_comentarios">Comentarios</string>
    <string name="text_senha">Senha</string>
    <string name="text_email">Email</string>
    <string name="text_telefone">Telefone</string>
    <string name="text_tipo">Tipo de usuário</string>
    <string name="delete_text">Excluir</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_toast">Toast</string>
    <string name="btn_impressoras">Impressoras</string>
    <string name="btn_computadores">Computadores</string>
    <string name="btn_outros">Outros</string>
    <string name="btn_verButoes">Ver Butões</string>
    <string name="btn_chamados">Chamados</string>
    <string name="btn_ativos">Ativos</string>
    <string name="btn_api">API</string>
    <string name="btn_usuarios">Usuarios</string>
    <string name="btn_Calculadora">Calculadora</string>
    <string name="btn_Pix">Pix</string>
    <string name="btn_ListaUsers">Lista de Usuários</string>
    <string name="pref_key">SharedPreferences</string>
    <string name="title_menu_ok">Salvar</string>
    <string name="title_menu_cancel">Voltar</string>

    <string-array name="tipo_usuario">
        <item>Administrador</item>
        <item>Usuario</item>
    </string-array>
</resources>