<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".view.ComputadoresActivity">

    <TextView
        style="@style/TextoView"
        android:id="@+id/lblId_computadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ID"/>

    <TextView
        style="@style/TextoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_nome"/>

    <EditText
        android:id="@+id/txtNome_computadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!---->

    <TextView
        style="@style/TextoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_tombo"/>

    <EditText
        android:id="@+id/txtTombo_computadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!---->

    <TextView
        style="@style/TextoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_comentarios"/>

    <EditText
        android:id="@+id/txtComentarios_computadores"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:inputType="textLongMessage"/>

    <!---->

    <Button
        android:id="@+id/btnExcluir_computadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_text"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        style="@style/BotaoLogout" />

</LinearLayout>