<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/glpiBg"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:text="@string/text_glpi" />

    <RelativeLayout
        android:background="@drawable/layout_bg_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">


            <EditText
                android:id="@+id/txtLogin_usuario_logeen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:drawableLeft="@android:drawable/sym_action_email"
                android:drawableTint="@color/FundoDarko"
                android:ems="20"
                android:text=""
                android:hint="@string/txt_user"
                android:inputType="text"/>


            <EditText
                android:id="@+id/txtSenha_usuario_logeen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                android:drawableTint="@color/FundoDarko"
                android:singleLine="true"
                android:layout_marginTop="16dp"
                android:ems="20"
                android:text=""
                android:hint="@string/txt_senha"
                android:inputType="textPassword"/>


            <Button
                android:id="@+id/btnLogin_logeen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:textAllCaps="false"
                android:backgroundTint="@color/FundoDarko"
                android:text="@string/text_login"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>